--- a/apps/money-tracker-ui/src/index.html
+++ b/apps/money-tracker-ui/src/index.html
@@ -30,10 +30,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
-<app-root>
-  <div class="loader"></div>
-</app-root>
+<body class="mat-typography mat-app-background">
+  <app-root>
+    <div class="loader"></div>
+  </app-root>
 </body>
 </html>
 
